# paperjunkies

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml  secrets.example.toml
lib/: __init__.py  auth.py  bibtex_utils.py  citation.py  dashboard_service.py  db.py  persistent_cookie.py  plots.py  settings.py  supabase_client.py  timeline_service.py  timezone_streamlit.py  timezone_utils.py  ui.py
pages/: 1_Timeline.py  2_Dashboard.py  3_Profile.py  login.py  reset.py
